2008-08-05  Vadim Kurland  <vadim@vk.crocodile.org>

	* pfAdvancedDialog_en_US.html: Help page for the advanced settings
	dialog for PF firewall

2008-08-04  Vadim Kurland  <vadim@vk.crocodile.org>

	* PolicyCompiler_PrintRule.cpp (PrintRule::_printActionOnReject):
	fixed bug #2037806: "Beta 3.0 Build 437: IPTABLES IPv6 policy ICMP
	reject action". Ip6tables target REJECT accepts different
	arguments for the --reject-with.

	* OSConfigurator_linux24.cpp (printPathForAllTools): fixed bug
	#2037809: "Beta 3.0 Build 437: IP6TABLES_RESTORE missing". Added
	missing variable declaration for IP6TABLES_RESTORE to the
	generated iptables script

2008-08-03  Vadim Kurland  <vadim@vk.crocodile.org>

	* ProjectPanel_file_ops.cpp: bug #2037314: "b449 does not
	build". More missing #include for gcc 4.3

	* newhostdialog_q.ui: fixed bug # 2036963 "Add new Host Object on
	MacOSX". The "new host" dialog was too big and did not fit on low
	resolution screen

	* res.pro: Now installing fwbuilder.desktop file on Linux and
	application icons under $DATADIR/icons/hicolor/ (sizes 128x128
	16x16 24x24 256x256 32x32 48x48 512x512 72x72)

	* bug #2036912 "fwbuilder b442 does not build". Added missing
	forward declarations and #include for gcc 4.3

	* Applied patch for gcc 4.3 per bug #2036881 "gcc 4.3 patch for
	b442", Mandriva Cooker patch
	http://svn.mandriva.com/cgi-bin/viewvc.cgi/packages/cooker/fwbuilder/current/SOURCES/fwbuilder-3.0.0-gcc4.3.patch
	
2008-08-02  Vadim Kurland  <vadim@vk.crocodile.org>

	* iptAdvancedDialog_en_US.html: Added help file for the firewall
	settings dialog for iptables firewalls

	* Help.cpp (Help::Help): generic built-in help framework. Help
	files are created in .html format in src/res/help directory. Help
	files can be localized, locale name is part of the file name; we
	need to create separate file for each supported language.

	First dialog to get associated help panel that can be activated by